--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,1 +1,23 @@
 @import './variables.scss';
+
+.btn {
+    padding: $padding $padding*2;
+    background: $green-bg;
+    cursor: pointer;
+    color: #fff;
+    border: none;
+    border-radius: $radius;
+    outline: none;
+    box-sizing: border-box;
+}
+
+.btn:hover {
+    background: #fff;
+    color: $green-bg;
+    font-weight: 700;
+}
+
+.btn:active {
+    background: #26ae68;
+    color: #fff;
+}
