--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,7 +1,7 @@
 $padding: 8px;
 $margin: 8px;
 
-$green-bg: #26ae68;
-$green-bg-hover: #31c375;
+$bg-color: #2656ae;
+// $bg-color: #26ae68;
 
 $radius: 4px;
